[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Art/Creatures/skeleton.svg" type="Texture" id=1]
[ext_resource path="res://Scripts/Creature.gd" type="Script" id=2]
[ext_resource path="res://Assets/HighTextTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Sound/deathSigh.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/ComponentScenes/BoneParticles.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 32.9848

[sub_resource type="CircleShape2D" id=2]
radius = 64.0

[node name="Creature" type="KinematicBody2D" groups=[
"Monster",
]]
collision_layer = 2
collision_mask = 15
script = ExtResource( 2 )
deathParticle = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="InteractionRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionRadius"]
visible = false
shape = SubResource( 2 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 1.33
autostart = true

[node name="ActivityTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="DialogueLabel" type="Label" parent="."]
visible = false
margin_left = 40.0
margin_top = -8.0
margin_right = 80.0
margin_bottom = 10.0
theme = ExtResource( 3 )
text = "ARGH!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueTimer" type="Timer" parent="DialogueLabel"]
wait_time = 2.0

[node name="Sound" type="Node" parent="."]

[node name="DeathCry" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 4 )
volume_db = 2.0

[node name="BattleCry" type="AudioStreamPlayer2D" parent="Sound"]
[connection signal="body_shape_entered" from="InteractionRadius" to="." method="_on_InteractionRadius_body_shape_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="ActivityTimer" to="." method="_on_ActivityTimer_timeout"]
[connection signal="timeout" from="DialogueLabel/DialogueTimer" to="." method="_on_DialogueTimer_timeout"]
